<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetailedCommitView" >

    <TextView
        android:id="@+id/textCommitId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aCommitActivity" 
        android:textAppearance="?android:attr/textAppearanceLarge"/>
 
    <Button
		android:id="@+id/buttonQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textCommitId"
        android:text="@string/quitButton"
        android:onClick="home" />
    
	<TextView
        android:id="@+id/textViewCommitDetails"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/buttonQuit"
        android:text="@string/projects_loading" />
</RelativeLayout>
